--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Reference Page</title>
 </head>
 <body>
+    <div class="container">
+        <h1>Hello, World</h1>
+        
+    </div>
     
     <script src="./arrays.js"></script>
 </body>
